tests/ui/const-generics/generic_const_exprs/mismatched-gat-subst-kind.stderr
error[E0747]: constant provided when a type was expected
  --> $DIR/mismatched-gat-subst-kind.rs:7:13
   |
LL | fn f<T: B<U<1i32> = ()>>() {}
   |             ^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0747`.
